fix foit (flash of invisible text)

--- a/src/app/styles/fonts.css
+++ b/src/app/styles/fonts.css
@@ -6,6 +6,7 @@
 
   font-weight: normal;
   font-style: normal;
+  ffont-display: swap;
 }
 
 @font-face {
@@ -16,6 +17,7 @@
 
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -26,6 +28,7 @@
 
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,4 +39,5 @@
 
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
